--- a/app/src/styles/globals.css
+++ b/app/src/styles/globals.css
@@ -11,6 +11,9 @@
     --primary-dark: 1 7 14;
 
     --negative: 236 46 80 1;
+    --positive: 6 171 93;
+
+    --secondary-hover: 247, 247, 248, 0.16;
 
     --content-primary: 247 247 248;
     --content-secondary: 171 189 204;
@@ -18,6 +21,8 @@
 
     --background: 3 15 28;
     --background-dark: 1 7 14;
+    --background-secondary: 247, 247, 248, 0.04;
+    --background-tertiary: 247, 247, 248, 0.24;
 
     --spacing-XSmall: 0.5rem;
     --spacing-Small: 0.75rem;
