Finish most work on the header side

--- a/app/src/styles/globals.css
+++ b/app/src/styles/globals.css
@@ -14,6 +14,7 @@
     --positive: 6 171 93;
 
     --secondary-hover: 247, 247, 248, 0.16;
+    --border-classic: 247, 247, 248, 0.15;
 
     --content-primary: 247 247 248;
     --content-secondary: 171 189 204;
