Start introducing proper text

--- a/app/src/styles/globals.css
+++ b/app/src/styles/globals.css
@@ -12,6 +12,7 @@
 
     --negative: 236 46 80 1;
     --positive: 6 171 93;
+    --white: 247 247 248;
 
     --secondary-hover: 247, 247, 248, 0.16;
     --border-classic: 247, 247, 248, 0.15;
