Introduce Form component, start porting to zod-like form creations

--- a/app/src/styles/globals.css
+++ b/app/src/styles/globals.css
@@ -10,7 +10,7 @@
     --primary-inverted: 3 15 28 1;
     --primary-dark: 1 7 14;
 
-    --negative: 236 46 80 1;
+    --negative: 236 46 80;
     --positive: 6 171 93;
     --white: 247 247 248;
 
