--- a/app/src/styles/globals.css
+++ b/app/src/styles/globals.css
@@ -10,7 +10,7 @@
     --primary-inverted: 3 15 28 1;
     --primary-dark: 1 7 14;
 
-    --negative: 236 46 80 1;
+    --negative: 236 46 80;
     --positive: 6 171 93;
     --white: 247 247 248;
 
@@ -26,6 +26,7 @@
     --background-secondary: 247, 247, 248, 0.04;
     --background-tertiary: 247, 247, 248, 0.24;
 
+    --spacing-XXSmall: 0.25rem;
     --spacing-XSmall: 0.5rem;
     --spacing-Small: 0.75rem;
     --spacing-Regular: 1rem;
