Adds FAQ, makes network banner less.. in your face..

--- a/app/src/styles/globals.css
+++ b/app/src/styles/globals.css
@@ -23,6 +23,7 @@
 
     --background: 3 15 28;
     --background-dark: 1 7 14;
+    --background-secondary-solid: 6 13 21;
     --background-secondary: 247, 247, 248, 0.04;
     --background-tertiary: 247, 247, 248, 0.24;
 
