--- a/app/src/styles/globals.css
+++ b/app/src/styles/globals.css
@@ -150,6 +150,7 @@
     --text-40: 40px;
     --text-44: 44px;
     --text-48: 48px;
+    --text-52: 52px;
     --text-56: 56px;
     --text-64: 64px;
     --text-72: 72px;
