--- a/app/src/styles/globals.css
+++ b/app/src/styles/globals.css
@@ -119,7 +119,10 @@
     --content-accent-bleedthrough2: var(--color-accent-purple-op16);
     --content-accent-bleedthrough3: var(--color-accent-purple-op12); 
     --stroke-accent: var(--color-accent-purple);
+    --header-gradient: linear-gradient(0deg, rgba(2, 2, 3, 0%) 0%, rgba(2, 2, 3, 88%) 100%), linear-gradient(113.516deg, rgba(185, 57, 255, 10%) 0%, rgba(0, 123, 255, 10%) 100%);
+    --primary-btn-gradient: linear-gradient(139.286deg, rgba(194, 81, 255, 20%) 0%, rgba(76, 162, 255, 20%) 100%);
   }
+
 
   /* We override the colors for testnet layouts. */
   .testnet-layout {
@@ -134,6 +137,8 @@
     --content-accent-bleedthrough2: var(--color-accent-salmon-op16);
     --content-accent-bleedthrough3: var(--color-accent-salmon-op12);
     --stroke-accent: var(--color-accent-salmon);
+    --header-gradient: linear-gradient(0deg, rgba(2, 2, 3, 0%) 0%, rgba(2, 2, 3, 88%) 100%), linear-gradient(113.994deg, rgba(255, 0, 153, 10%) 0%, rgba(255, 196, 3, 10%) 100%);
+    --primary-btn-gradient: linear-gradient(116.14deg, rgba(255, 82, 186, 0.2) 0%, rgba(255, 213, 77, 0.2) 100%);
   }
 
   /* Font Styles */
