--- a/app/src/styles/globals.css
+++ b/app/src/styles/globals.css
@@ -121,6 +121,11 @@
     --stroke-accent: var(--color-accent-purple);
     --header-gradient: linear-gradient(0deg, rgba(2, 2, 3, 0%) 0%, rgba(2, 2, 3, 88%) 100%), linear-gradient(113.516deg, rgba(185, 57, 255, 10%) 0%, rgba(0, 123, 255, 10%) 100%);
     --primary-btn-gradient: linear-gradient(139.286deg, rgba(194, 81, 255, 20%) 0%, rgba(76, 162, 255, 20%) 100%);
+    --testnet-search-gradient: linear-gradient(116.144deg, rgba(255, 82, 186, 40%) 0%, rgba(255, 213, 77, 40%) 100%);
+    --mainnet-search-gradient: linear-gradient(139.286deg, rgba(194, 81, 255, 40%) 0%, rgba(76, 162, 255, 40%) 100%);
+
+    --home-page-cards: linear-gradient(135deg, rgba(194, 81, 255, 0.12) 0%, rgba(76, 162, 255, 0.12) 100%);
+    --purple-salmon-op12: linear-gradient(139.286deg, rgba(139, 81, 255, 12%) 0%, rgba(250, 128, 114, 12%) 100%);
   }
 
   /* Font Styles */
