Start introducing dependencies / dependents endpoints

--- a/app/src/styles/globals.css
+++ b/app/src/styles/globals.css
@@ -160,6 +160,8 @@
     --text-88: 88px;
     --text-96: 96px;
 
+    --lh-10: 10px;
+    --lh-11: 11px;
     --lh-12: 12px;
     --lh-14: 14px;
     --lh-16: 16px;
