Make linking much better on readmes

--- a/app/src/styles/globals.css
+++ b/app/src/styles/globals.css
@@ -235,3 +235,14 @@ html {
 #terms p {
   @apply mb-sm;
 }
+
+
+.header-anchor{
+  @apply opacity-0 hover:opacity-100;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.markdown-header:hover .header-anchor {
+  @apply opacity-100;
+}
